src/scss/sections/_experience.scss
.experience {
  display: flex;
  flex-direction: column;
  row-gap: 60px;
  padding-top: 30px;

  @media (width >= 768px) {
    padding-top: 60px;
    row-gap: 120px;
  }

  @media (width >= 1024px) {
    display: grid;
    grid-template-columns: min-content 1fr;
    align-items: center;
    column-gap: 120px;
    row-gap: 0;
    max-width: 904px;
    margin-inline: auto;
  }

  @media (width >= 1440px) {
    max-width: 1080px;
  }

  @media (width >= 1920px) {
    max-width: 1360px;
  }

  &__top {
    padding-left: 30px;
    display: flex;
    column-gap: 30px;
    overflow-x: scroll;
    overflow-y: hidden;

    &::-webkit-scrollbar {
      // width: 0;
      -webkit-appearance: none;
    }

    @media (width >= 768px) {
      padding-left: 60px;
    }

    @media (width >= 1024px) {
      flex-direction: column;
      padding-left: 0;
      text-align: end;
      row-gap: 30px;
      column-gap: 0;
    }
  }

  .container {
    @media (width >= 1024px) {
      padding-inline: 0;
    }
  }

  &__link {
    @extend %h1;
    white-space: nowrap;
    color: $grey--500;
    transition: color $animation-duration ease;

    &--active {
      @extend %h1--gradient;
    }

    @media (hover: hover) {
      &:hover {
        color: $accent;
      }
    }
  }

  &__bottom {
    position: relative;
    display: flex;
    flex-direction: column;
    row-gap: 30px;
    color: $light;

    &::before {
      content: "";
      display: block;
      width: 100%;
      height: 4px;
      position: absolute;
      top: -30px;
      left: 50%;
      translate: -50%;
      background-color: rgba($light, $alpha: 0.3);

      @media (width >= 768px) {
        top: -60px;
      }

      @media (width >= 1024px) {
        width: 4px;
        height: 100%;
        left: -60px;
        top: 0;
        bottom: 0;
      }
    }
  }

  &__subtitle {
    font-size: 20px;
    font-weight: 700;

    @media (width >= 768px) {
      font-size: 30px;
    }
  }

  &__text {
    font-size: 19px;
    line-height: 1.5789;
  }
}

